--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,17 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<h1>Home Template</h1>
+
+    <h1>Home Template</h1>
+
+    <div>
+        <div>
+            {% for room in rooms %}
+            <div>
+                <h5>{{room.id}} -- {{room.name}}</h5>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+
 {% endblock content %}
