--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -2,19 +2,12 @@
 
 {% block content %}
 
-    <h1>Home Template</h1>
-
     <div>
-        <div>
-            {% for room in rooms %}
-            <div>
-                <span>@{{room.host.username}}</span>
-                <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
-                <small>{{room.topic.name}}</small>
-                <hr>
-            </div>
-            {% endfor %}
-        </div>
+        <form method="POST" action="">
+            {% csrf_token %}
+            {{form.as_p}}
+            <input type="submit" value="Submit" >
+        </form>
     </div>
 
 {% endblock content %}
