--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,9 @@
-<a href="/">LOGO</a>
+<a href="/">
+    <h1>LOGO</h1>
+</a>
+
+<form method="GET" action="{% url 'home' %}">
+    <input type="text" name="q" placeholder="Search Rooms..." >
+</form>
 
 <hr>
