Added registratio authenticatio to the application

--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -4,4 +4,10 @@
     <h1>{{room.name}}</h1>
     <p>{{room.description}}</p>
 
+    <div class="comment-wrapper">
+        <h3>Conversation</h3>
+        <hr>
+        
+    </div>
+
 {% endblock content %}
