--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -8,6 +8,13 @@
         <h3>Conversation</h3>
         <hr>
         
+        {% for message in room_messages %}
+            <div>
+                <small>@{{message.user}} {{message.created|timesince}} ago</small>
+                <p>{{message.body}}</p>
+                <hr>
+            </div>
+        {% endfor %}
     </div>
 
 {% endblock content %}
