Added comment section in the room

--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -17,4 +17,15 @@
         {% endfor %}
     </div>
 
+    {% if request.user.is_authenticated %}
+    <div class="comment-form">
+        <form method="POST" action="">
+            {% csrf_token %}
+
+            <input type="text" name="body" id="body" placeholder="Write your message here...">
+        </form>
+
+    </div>
+    {% endif %}
+
 {% endblock content %}
