--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -18,6 +18,9 @@
 
       {% for message in room_messages %}
       <div>
+        {% if request.user == message.user %}
+          <a href="{% url 'delete-message' message.id %}">Delete</a>
+        {% endif %}
         <small>@{{message.user}} {{message.created|timesince}} ago</small>
         <p>{{message.body}}</p>
         <hr />
@@ -46,9 +49,9 @@
     <hr />
 
     {% for participant in participants %}
-      <div>
-        <h4>@{{participant.username}}</h4>
-      </div>
+    <div>
+      <h4>@{{participant.username}}</h4>
+    </div>
     {% endfor %}
   </div>
 </div>
