Added recent activity functionality in home page

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,7 +5,7 @@
 <style>
     .home-container{
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 3fr 1fr;
     }
 </style>
 
@@ -45,6 +45,25 @@
                 </div>
                 {% endfor %}
             </div>
+        </div>
+
+        <div>
+            <h3>Recent Activity</h3>
+            <hr>
+
+            {% for message in room_messages %}
+                <div>
+                    <small>@{{message.user}} {{message.created|timesince}}</small><br>
+                    <small>replied to {{message.room}}</small>
+
+                    <p>{{message}}</p>
+                    {% if request.user == message.user %}
+                        <a href="{% url 'delete-message' message.id %}">Delete</a>
+                    {% endif %}
+
+                    <hr>
+                </div>
+            {% endfor %}
         </div>
 
         
