--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -3,7 +3,7 @@
 
 {% for message in room_messages %}
     <div>
-        <small>@{{message.user}} {{message.created|timesince}}</small><br>
+        <small><a href="{% url 'user-profile' message.user.id %}">@{{message.user}}</a> {{message.created|timesince}}</small><br>
         <small>replied to {{message.room}}</small>
 
         <p>{{message}}</p>
