added static dir to use in a app

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
+
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
+
     <title>Smart Desk</title>
 </head>
 <body>
@@ -17,6 +22,7 @@
             {% endfor %}
         </ul>
     {% endif %}
+
     
     {% block content %}{% endblock content %}
     
