--- a/templates/main.html
+++ b/templates/main.html
@@ -3,15 +3,16 @@
 {% load static %}
 
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <title>StudyBuddy - Find study partners around the world!</title>
+  </head>
 
-    <title>Smart Desk</title>
-</head>
-<body>
+  <body>
 
     {% include 'navbar.html' %}
 
@@ -25,6 +26,7 @@
 
     
     {% block content %}{% endblock content %}
-    
-</body>
+
+    <script src="{% static 'js/script.js' %}"></script>
+  </body>
 </html>
