--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,9 @@
+{% load static %}
+
 <header class="header header--loggedIn">
     <div class="container">
       <a href="{% url 'home' %}" class="header__logo">
-        <img src="assets/logo.svg" />
+        <img src="{% static 'images/logo.svg' %}" />
         <h1>StudyBuddy</h1>
       </a>
       <form class="header__search" method="GET" action="{% url 'home' %}">
@@ -16,20 +18,17 @@
         </label>
       </form>
       <nav class="header__menu">
-        <!-- Not Logged In -->
-        <!-- <a href="/login.html">
-          <img src="./assets/avatar.svg" />
-          <p>Login</p>
-        </a> -->
+        
 
         <!-- Logged In -->
 
+        {% if request.user.is_authenticated %}
         <div class="header__user">
           <a href="profile.html">
             <div class="avatar avatar--medium active">
               <img src="https://randomuser.me/api/portraits/men/37.jpg" />
             </div>
-            <p>John Doe <span>@john_doe</span></p>
+            <p>{{request.user.username}} <span>@{{request.user.username}}</span></p>
           </a>
           <button class="dropdown-button">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
@@ -38,6 +37,15 @@
             </svg>
           </button>
         </div>
+        
+        {% else %}
+
+        <!-- Not Logged In -->
+        <a href="{% url 'login' %}">
+          <img src="{% static 'images/avatar.svg' %}" />
+          <p>Login</p>
+        </a>
+        {% endif %}
 
         <div class="dropdown-menu">
           <a href="settings.html" class="dropdown-link"
@@ -49,7 +57,7 @@
             </svg>
             Settings</a
           >
-          <a href="login.html" class="dropdown-link"
+          <a href="{% url 'logout' %}" class="dropdown-link"
             ><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>sign-out</title>
               <path
@@ -69,7 +77,7 @@
 
 
 
-{% if request.user.is_authenticated %}
+{% comment %} {% if request.user.is_authenticated %}
 <p>Hello {{request.user}}</p>
 <a href="{% url 'logout' %}">Logout</a>
 {% else %}
@@ -77,4 +85,4 @@
 {% endif %}
 
 
-<hr>
+<hr> {% endcomment %}
