Added user edit profile functionality

--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -9,7 +9,7 @@
         <div class="room">
           <div class="room__top">
             <div class="room__topLeft">
-              <a href="{{request.META.HTTP_REFERER}}">
+              <a href="{% url 'home' %}">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                   <title>arrow-left</title>
                   <path
@@ -120,7 +120,10 @@
             </div>
           </div>
           <div class="room__message">
-            <form action="#"><input name="" placeholder="Write your message here..." /></form>
+            <form action="" method="POST">
+              {% csrf_token %}
+              <input name="body" placeholder="Write your message here..." />
+            </form>
           </div>
         </div>
         <!-- Room End -->
