--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -18,7 +18,7 @@
               {% csrf_token %}
               <div class="form__group form__group">
                 <label for="room_name">Email</label>
-                <input id="username" name="email" type="text" placeholder="e.g. dennis_ivy" />
+                <input id="email" name="email" type="email" placeholder="e.g. mohammed@gmail.com" />
               </div>
               <div class="form__group">
                 <label for="password">Password</label>
