--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -14,6 +14,17 @@
     <div class="roomListRoom__content">
       <a href="{% url 'room' room.id %}">{{room.name}}</a>
     </div>
+
+    <div style="display: flex; column-gap: 0.5em;">
+    {% for participate in room.participants.all %}
+      <a href="{% url 'user-profile' participate.id %}" class="room__author">
+        <div class="avatar avatar--small">
+          <img src="{{participate.avatar.url}}" />
+        </div>
+      </a>
+    {% endfor %}
+    </div>
+
     <div class="roomListRoom__meta">
       <a href="{% url 'room' room.id %}" class="roomListRoom__joined">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
